# rust-solutions

./: .gitignore
04-headr/headr/: Cargo.toml
04-headr/headr/src/: lib.rs  main.rs
04-headr/headr/tests/: cli.rs
Chapter-02/echor/: Cargo.toml  mk_outs.sh
Chapter-02/echor/src/: main.rs
Chapter-02/echor/tests/: cli.rs
Chapter-02/learning_how_to_clap/: Cargo.toml
Chapter-03/catr/: Cargo.toml  mk_outs.sh
Chapter-03/catr/src/: lib.rs
