[package]
name = "headr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0.79"

[dev-dependencies]
assert_cmd = "2.0.12"
pretty_assertions = "1.4.0"
predicates = "3.0.4"
rand = "0.8.5"
